fixed error with key

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function join() {
   document.getElementById("video").disabled = true;
   var channel_key = null;
 
-  console.log("Init AgoraRTC client with vendor key: " + be5689b093314bcb8c0fd39117ea22a6);
+  console.log("Init AgoraRTC client with vendor key: " + "be5689b093314bcb8c0fd39117ea22a6");
   client = AgoraRTC.createClient({mode: 'interop'});
   client.init(be5689b093314bcb8c0fd39117ea22a6, function () {
     console.log("AgoraRTC client initialized");
