removed bootstrap and added image

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <title>AgriConnect</title>
-<link rel="stylesheet" href="vendor/bootstrap.min.css">
 <!-- Changed by MarinaF -->
 <script src="AgoraRTCSDK-2.2.0.js"></script>
 <script src="vendor/jquery.js"></script>
 </head>
 
 <body>
+<img src="/agrichain_header_logo.png" alt="" class="agri-logo">
 <div id="div_device" class="panel panel-default">
 <div class="select">
 <label for="audioSource">Audio source: </label><select id="audioSource"></select>
