--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>AgriConnect</title>
 <!-- Changed by MarinaF -->
+<link rel="stylesheet" href="/styles.css">
 <script src="AgoraRTCSDK-2.2.0.js"></script>
 <script src="vendor/jquery.js"></script>
 </head>
@@ -20,7 +21,7 @@
 
 <div id="div_join" class="panel panel-default">
 <div class="panel-body">
-Key: <input id="key" type="text" value="" size="36"></input>
+
 Channel: <input id="channel" type="text" value="1000" size="4"></input>
 Host: <input id="video" type="checkbox" checked></input>
 <button id="join" class="btn btn-primary" onclick="join()">Join</button>
